<resources>
    <string name="app_name">Car Suggestion</string>
    <string name="register_text">Kayıt Ol</string>
    <string name="login_text">Giriş Yap</string>
    <string name="password_text">Şifre</string>
    <string name="username_text">Kullanıcı Adı</string>
    <string name="welcome_text">Hoş Geldiniz</string>
    <string name="app_title_text">CAR SUGGESTION</string>
    <string name="forgot_password_text">Şifremi Unuttum</string>
    <string name="password2_text">Şifre (Tekrar)</string>
    <string name="email_text">E-posta</string>
    <string name="current_car_text">Mevcut Araba (İsteğe Bağlı)</string>
    <string name="location_text">Konum (İsteğe Bağlı)</string>
    <string name="continue_as_a_guest_text">Misafir Girişi</string>
    <string name="car_suggestion_text">Araç Önerisi</string>
    <string name="car_suggestion_description_text">Kriterlere verilen yanıtlara göre araç önerisinde bulunan sistem.</string>
    <string name="car_detail_text">Araç Detay</string>
    <string name="car_detail_description_text">Seçilen aracın teknik verilerini gösteren ve yorum yapılabilinen sistem.</string>
    <string name="system_default_text">Sistem Teması</string>
    <string name="dark_text">Koyu</string>
    <string name="light_text">Açık</string>
    <string name="logout_text">Çıkış Yap</string>
    <string name="profile_text">Profil</string>
    <string name="edit_text">Düzenle</string>
    <string name="profile_edit_text">Profil Düzenle</string>
    <string name="save_text">Kaydet</string>
    <string name="settings_text">Ayarlar</string>
    <string name="saved_text">Kaydedilenler</string>
    <string name="favorite_text">Favoriler</string>
    <string name="profile_password_text">Şifre:</string>
    <string name="theme_text">Tema</string>
    <string name="profile_photo_text">Profil Fotoğrafı</string>
    <string name="home_title_description_text">Araç Önerisi, Araç Teknik Özellikleri ve Yorum</string>
    <string name="about_text">Hakkında</string>
    <string name="profile_registered_date_text">Kayıt Olunan Tarih:</string>
    <string name="car_detail_cars_text">Lütfen Marka Seçin!</string>
    <string name="car_detail_models_text">Lütfen Model Seçin!</string>
    <string name="brand_text">Marka</string>
    <string name="model_text">Model</string>
    <string name="no_model_text">Model Bulunamadı!</string>
    <string name="favourites_text">Favoriler</string>
    <string name="acceleration_text">0–100 km/sa hızlanma (sn):</string>
    <string name="baggage_size_text">Bagaj hacmi (lt):</string>
    <string name="chassis_type_text">Araç tipi:</string>
    <string name="emission_results_text">Emisyon değeri (gr/km):</string>
    <string name="engine_text">"Motor: "</string>
    <string name="fuel_efficiency_text">Ortalama yakıt tüketimi (lt/100 km):</string>
    <string name="gearbox_text">"Vites: "</string>
    <string name="ncap_result_text">"Euro Ncap Sonucu: "</string>
    <string name="price_text">"Fiyat (₺): "</string>
    <string name="segment_text">"Segment: "</string>
    <string name="like_text">10</string>
    <string name="suggestion_description_text">Sizin için önerdiğimiz araçlar:</string>
    <string name="criteria_description_text">Lütfen tüm kriterleri doldurun.</string>
    <string name="suggest_text">Öner</string>
    <string name="baggage_size_criteria_text">Bagaj Hacmi (0-10)</string>
    <string name="fuel_efficiency_criteria_text">Yakıt Verimliliği (0-10)</string>
    <string name="performance_criteria_text">Performans (0-10)</string>
    <string name="security_criteria_text">Güvenlik (0-10)</string>
    <string name="gearbox_criteria_text">Vites</string>
    <string name="chassis_type_criteria_text">Araç Tipi</string>
    <string name="wheel_drive_criteria_text">Çekiş Tipi</string>
    <string name="price_min_criteria_text">Fiyat (min)</string>
    <string name="price_max_criteria_text">Fiyat (max)</string>
    <string name="date_text">1 Aralık 2022</string>
    <string name="no_internet_connection_title_text">İnternet Bağlantısı Yok</string>
    <string name="no_internet_connection_description_text">Lütfen internet bağlantınızı kontrol edin!</string>
    <string name="ok_text">Tamam</string>
    <string name="operation_failed_text">İşlem Başarısız!</string>
    <string name="car_added_to_favorites_text">Araç Favorilere Eklendi!</string>
    <string name="suggestion_title_text">Öneri</string>
    <string name="user_suggestion_description_text">Bu aracı diğer kullanıcılar için öneriyor musunuz?</string>
    <string name="recommend_text">Öneriyorum</string>
    <string name="car_recommended_text">Araç Önerildi!</string>
    <string name="cancel_text">İptal</string>
    <string name="user_suggestion_description_text2">Bu aracı daha önce diğer kullanıcılar için önermeme işleminde bulundunuz! İşlemi geri alıp, bu aracı diğer kullanıcılar için öneriyor musunuz?</string>
    <string name="user_suggestion_description_text3">Bu aracı zaten diğer kullanıcılar için önerdiniz. İşlemi geri almak istiyor musunuz?</string>
    <string name="car_recommended_text2">Araç Önerisi Geri Alındı!</string>
    <string name="user_suggestion_description_text4">Bu aracı diğer kullanıcılara önermiyor musunuz?</string>
    <string name="car_not_recommended_text">Araç Önerilmedi!</string>
    <string name="user_suggestion_description_text5">Bu aracı daha önce diğer kullanıcılar için önerme işleminde bulundunuz! İşlemi geri alıp, bu aracı diğer kullanıcılar için önermiyor musunuz?</string>
    <string name="not_recommend_text">Önermiyorum</string>
    <string name="user_suggestion_description_text6">Bu aracı zaten diğer kullanıcılar için önermediniz. İşlemi geri almak istiyor musunuz?</string>
    <string name="undo_action_text">İşlemi Geri Al</string>
    <string name="car_not_recommended_text2">Araç Önerilmeme İşlemi Geri Alındı!</string>
    <string name="it_does_not_matter_text">Farketmez</string>
    <string name="automatic_text">Otomatik</string>
    <string name="manual_text">Manuel</string>
    <string name="compulsory_text">Zorunlu</string>
    <string name="fill_all_fields_text">Lütfen Tüm Alanları Doldurun!</string>
    <string name="must_login_text">Kullanıcı girişi yapmalısınız!</string>
    <string name="about_description_text">Bu uygulama ile araç önerisi alabilir, teknik detaylarını görüntüleyebilir ve yorumda bulunabilirsiniz.</string>
    <string name="signing_in_text">Giriş Yapılıyor...</string>
    <string name="not_left_blank_text">Bu alan boş bırakılamaz!</string>
    <string name="forgot_password_description_text">Şifrenizi öğrenmek için lütfen iletişime geçiniz.</string>
    <string name="logged_text">Giriş Yapıldı!</string>
    <string name="password_do_not_match_text">Şifreler Eşleşmiyor!</string>
    <string name="invalid_mail_address_text">Geçersiz Mail Adresi!</string>
    <string name="gallery_text">Galeri</string>
    <string name="camera_text">Kamera</string>
    <string name="avatar_text">Avatar</string>
    <string name="add_profile_photo_title_text">Profil Fotoğrafı Ekle</string>
    <string name="add_profile_photo_description_text">Eklemek istediğiniz fotoğrafı veya avatarı seçiniz.</string>
    <string name="not_allowed_text">İzin Verilmedi!</string>
    <string name="in_correct_text">Hatalı!</string>
    <string name="password_do_not_match_text2">Girilen şifreler uyuşmamaktadır! Lütfen tekrar deneyin.</string>
    <string name="user_registration_created_text">Kullanıcı Kaydı Oluşturuldu!</string>
    <string name="please_login_text">Lütfen Giriş Yapın!</string>
    <string name="existing_text">Çıkış Yapılıyor...</string>
    <string name="app_theme_title_text">Uygulama Teması</string>
    <string name="app_theme_description_text">Uygulama temasını seçiniz.</string>
    <string name="app_theme_description_text2">Mevcut tema:</string>
    <string name="logout_description_text">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="logged_out_text">Çıkış Yapıldı!</string>
    <string name="user_information_updated_text">Kullanıcı Bilgileri Güncellendi!</string>
    <string name="language_text">Dil</string>
    <string name="turkish_text">Türkçe</string>
    <string name="english_text">İngilizce</string>
    <string name="app_language_text">Uygulama Dili</string>
</resources>